{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 65,
  "lineage": "0aae1bc7-66ad-2572-f30c-44eb853159fd",
  "resources": [
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_elb",
      "name": "medstick_prodelb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:520696732006:loadbalancer/web-elb",
            "availability_zones": [
              "ap-south-1a",
              "ap-south-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-elb-631313974.ap-south-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "web-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "web-elb",
            "security_groups": [
              "sg-0da4958efa8f1db72"
            ],
            "source_security_group": "520696732006/Demo security group by terraform",
            "source_security_group_id": "sg-0da4958efa8f1db72",
            "subnets": [
              "subnet-05791e6f0d1683665",
              "subnet-0f5f9a5d4b5ed2a79"
            ],
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.loadbalancer.aws_security_group.medstick_prodlbsg",
            "module.vpc.aws_subnet.medstick_prodsubnet",
            "module.vpc.aws_subnet.medstick_prodsubnet1",
            "module.vpc.aws_vpc.medstick_prodvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "medstick_prodlbsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520696732006:security-group/sg-0da4958efa8f1db72",
            "description": "Demo Module by terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da4958efa8f1db72",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Demo security group by terraform",
            "name_prefix": "",
            "owner_id": "520696732006",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-038755a3842dc5434"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.medstick_prodvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "medstick_prodgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520696732006:internet-gateway/igw-066432ed6e3f71c2d",
            "id": "igw-066432ed6e3f71c2d",
            "owner_id": "520696732006",
            "tags": {
              "Project": "Medstick",
              "Project_Manager": "Vrusha",
              "Purpose": "Prod",
              "created_by": "priyanka.pradhan@nineleaps.com"
            },
            "tags_all": {
              "Project": "Medstick",
              "Project_Manager": "Vrusha",
              "Purpose": "Prod",
              "created_by": "priyanka.pradhan@nineleaps.com"
            },
            "vpc_id": "vpc-038755a3842dc5434"
          },
          "dependencies": [
            "module.vpc.aws_vpc.medstick_prodvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "medstick_prodroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520696732006:route-table/rtb-0055a669d2da8e4d0",
            "id": "rtb-0055a669d2da8e4d0",
            "owner_id": "520696732006",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-066432ed6e3f71c2d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Project": "Medstick",
              "Project_Manager": "Vrusha",
              "Purpose": "Prod",
              "created_by": "priyanka.pradhan@nineleaps.com"
            },
            "tags_all": {
              "Project": "Medstick",
              "Project_Manager": "Vrusha",
              "Purpose": "Prod",
              "created_by": "priyanka.pradhan@nineleaps.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-038755a3842dc5434"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.medstick_prodgateway",
            "module.vpc.aws_vpc.medstick_prodvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "medstick_prodrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dea7a53ac9a6cb1",
            "route_table_id": "rtb-0055a669d2da8e4d0",
            "subnet_id": "subnet-05791e6f0d1683665"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.medstick_prodgateway",
            "module.vpc.aws_route_table.medstick_prodroute",
            "module.vpc.aws_subnet.medstick_prodsubnet",
            "module.vpc.aws_vpc.medstick_prodvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "medstick_prodrt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b1414b9ac334f34",
            "route_table_id": "rtb-0055a669d2da8e4d0",
            "subnet_id": "subnet-0f5f9a5d4b5ed2a79"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.medstick_prodgateway",
            "module.vpc.aws_route_table.medstick_prodroute",
            "module.vpc.aws_subnet.medstick_prodsubnet1",
            "module.vpc.aws_vpc.medstick_prodvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "medstick_prodsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520696732006:subnet/subnet-05791e6f0d1683665",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05791e6f0d1683665",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "520696732006",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Project": "Medstick",
              "Project_Manager": "Vrusha",
              "Purpose": "Prod",
              "created_by": "priyanka.pradhan@nineleaps.com"
            },
            "tags_all": {
              "Project": "Medstick",
              "Project_Manager": "Vrusha",
              "Purpose": "Prod",
              "created_by": "priyanka.pradhan@nineleaps.com"
            },
            "vpc_id": "vpc-038755a3842dc5434"
          },
          "dependencies": [
            "module.vpc.aws_vpc.medstick_prodvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "medstick_prodsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520696732006:subnet/subnet-0f5f9a5d4b5ed2a79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5f9a5d4b5ed2a79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "520696732006",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Project": "Medstick",
              "Project_Manager": "Vrusha",
              "Purpose": "Prod",
              "created_by": "priyanka.pradhan@nineleaps.com"
            },
            "tags_all": {
              "Project": "Medstick",
              "Project_Manager": "Vrusha",
              "Purpose": "Prod",
              "created_by": "priyanka.pradhan@nineleaps.com"
            },
            "vpc_id": "vpc-038755a3842dc5434"
          },
          "dependencies": [
            "module.vpc.aws_vpc.medstick_prodvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "medstick_prodvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520696732006:vpc/vpc-038755a3842dc5434",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-030eb369127b20fa0",
            "default_route_table_id": "rtb-07c8e60d2d93c12c2",
            "default_security_group_id": "sg-0ee885c492b256669",
            "dhcp_options_id": "dopt-c7a2fdae",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-038755a3842dc5434",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07c8e60d2d93c12c2",
            "owner_id": "520696732006",
            "tags": {
              "Project": "Medstick",
              "Project_Manager": "Vrusha",
              "Purpose": "Prod",
              "created_by": "priyanka.pradhan@nineleaps.com"
            },
            "tags_all": {
              "Project": "Medstick",
              "Project_Manager": "Vrusha",
              "Purpose": "Prod",
              "created_by": "priyanka.pradhan@nineleaps.com"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}